customization for chart w and h complete, with y and x axes correctly aligned - next add axes data labels

--- a/main/styles.css
+++ b/main/styles.css
@@ -7,9 +7,8 @@ body{
 }
 
 div#root{
-  width:100%;
+  width:90%;
   padding: 4%;
-  margin: 1% auto;
   background: #F8F8FF;
   border-radius: 5%;
 }
@@ -20,10 +19,17 @@ h1 {
   text-align: center;
 }
 
-#chart {
-  padding-left: 2%;
+.chart-wrapper {
   width:100%;
-  float: left;
+  margin:1% auto;
+  display: flex;
+  justify-content: center;
+}
+
+#chart {
+  float:left;
+  width:100%;
+  padding-left: 2%;
   border-right: solid thin grey;
   border-top: solid thin grey;
   transform: rotate(180deg);
@@ -49,10 +55,10 @@ h1 {
 #xaxis {
   min-width: 100%;
   text-align: center;
-  float:left;
 }
 
 #yaxis {
-  text-align: left;
+  width:10%;
+  align-self:center;
   transform: rotate(-90deg);
 }
